--- a/.github/workflows/rebuild-release.yml
+++ b/.github/workflows/rebuild-release.yml
@@ -16,6 +16,14 @@ on:
         description: 'Atnaujinti APT/RPM repozitorijas po build'
         type: boolean
         default: true
+      arch:
+        description: 'Kuri architektura buildinti'
+        type: choice
+        default: all
+        options:
+          - all
+          - amd64
+          - arm64
 
 permissions:
   contents: write
@@ -95,6 +103,7 @@ jobs:
       fail-fast: false
       matrix:
         arch: [amd64, arm64]
+    if: github.event.inputs.arch == 'all' || github.event.inputs.arch == matrix.arch
     steps:
       - name: Checkout
         uses: actions/checkout@v4
