--- a/.github/workflows/rebuild-release.yml
+++ b/.github/workflows/rebuild-release.yml
@@ -85,7 +85,7 @@ jobs:
           fi
           
           # Check assets
-          ASSET_COUNT=$(jq '[.assets[] | select(.name | test("linux.*\\.tar\\.(xz|gz|zst|bz2)$"; "i"))] | length' /tmp/release.json)
+          ASSET_COUNT=$(jq '[.assets[] | select(.name | test("linux"; "i")) | select(.name | test("\\.tar\\.(xz|gz|zst|bz2)$"; "i"))] | length' /tmp/release.json)
           if [[ "$ASSET_COUNT" -eq 0 ]]; then
             echo "::error::No Linux tarball assets found for version $TAG"
             exit 1
@@ -127,12 +127,16 @@ jobs:
           
           ./scripts/build/build.sh
           
-          # Verify packages were created
-          if ls dist/*.deb 1>/dev/null 2>&1 && ls dist/*.rpm 1>/dev/null 2>&1; then
+          # Verify packages were created for this architecture
+          rpm_arch="x86_64"
+          if [[ "${{ matrix.arch }}" == "arm64" ]]; then
+            rpm_arch="aarch64"
+          fi
+          if ls "dist"/*_${{ matrix.arch }}.deb 1>/dev/null 2>&1 && ls "dist"/*-${rpm_arch}.rpm 1>/dev/null 2>&1; then
             echo "Packages built successfully"
             echo "built=true" >> "$GITHUB_OUTPUT"
           else
-            echo "No packages found"
+            echo "No packages found for ${{ matrix.arch }}"
             echo "built=false" >> "$GITHUB_OUTPUT"
             exit 1
           fi
