fix: enhance release asset handling by supporting optional SHA256SUMS file and improving error messaging

--- a/.github/workflows/auto-build.yml
+++ b/.github/workflows/auto-build.yml
@@ -166,7 +166,7 @@ jobs:
           path: |
             dist/*.deb
             dist/*.rpm
-            dist/SHA256SUMS
+            dist/SHA256SUMS*
             dist/meta.env
             dist/release_title.txt
             dist/release_notes.md
@@ -206,6 +206,17 @@ jobs:
           
           source dist/meta.env
           RELEASE_TITLE=$(cat dist/release_title.txt 2>/dev/null || echo "$UPSTREAM_TAG")
+          shopt -s nullglob
+          RELEASE_ASSETS=(dist/*.deb dist/*.rpm)
+          if [[ -f "dist/SHA256SUMS" ]]; then
+            RELEASE_ASSETS+=(dist/SHA256SUMS)
+          else
+            echo "Warning: dist/SHA256SUMS not found, creating release without checksum file."
+          fi
+          if [[ "${#RELEASE_ASSETS[@]}" -eq 0 ]]; then
+            echo "No release assets found in dist/"
+            exit 1
+          fi
           
           echo "Creating release: $UPSTREAM_TAG"
           
@@ -224,12 +235,12 @@ jobs:
               --title "$RELEASE_TITLE" \
               --notes-file dist/release_notes.md \
               --prerelease \
-              dist/*.deb dist/*.rpm dist/SHA256SUMS
+              "${RELEASE_ASSETS[@]}"
           else
             gh release create "$UPSTREAM_TAG" \
               --title "$RELEASE_TITLE" \
               --notes-file dist/release_notes.md \
-              dist/*.deb dist/*.rpm dist/SHA256SUMS
+              "${RELEASE_ASSETS[@]}"
           fi
           
           echo "Release created successfully: $UPSTREAM_TAG"
