--- a/.github/workflows/auto-build.yml
+++ b/.github/workflows/auto-build.yml
@@ -255,64 +255,5 @@ jobs:
 
   deploy-repos:
     needs: [check-and-build, release]
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y dpkg-dev createrepo-c jq
-
-      - name: Download packages from release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          mkdir -p dist
-          rm -rf dist/*
-          
-          # Get latest stable release
-          LATEST=$(gh api repos/${{ github.repository }}/releases/latest --jq '.tag_name' 2>/dev/null || echo "")
-          
-          if [[ -n "$LATEST" && "$LATEST" != "null" ]]; then
-            echo "Downloading packages from stable release: $LATEST"
-            gh release download "$LATEST" --dir dist --pattern "*.deb" --pattern "*.rpm" || true
-          fi
-          
-          # Get latest pre-release (if exists and different from stable)
-          PRERELEASE=$(gh api repos/${{ github.repository }}/releases --jq '[.[] | select(.prerelease == true)] | sort_by(.created_at) | last | .tag_name // ""' 2>/dev/null || echo "")
-          
-          if [[ -n "$PRERELEASE" && "$PRERELEASE" != "null" && "$PRERELEASE" != "$LATEST" ]]; then
-            echo "Downloading packages from pre-release: $PRERELEASE"
-            gh release download "$PRERELEASE" --dir dist --pattern "*.deb" --pattern "*.rpm" || true
-          fi
-
-      - name: Verify downloaded packages
-        run: |
-          ls -la dist
-          if ! ls dist/*.deb >/dev/null 2>&1; then
-            echo "No .deb packages downloaded" >&2
-            exit 1
-          fi
-          if ! ls dist/*.rpm >/dev/null 2>&1; then
-            echo "No .rpm packages downloaded" >&2
-            exit 1
-          fi
-
-      - name: Build and publish repositories
-        run: |
-          chmod +x scripts/*/*.sh
-          ./scripts/publish/publish.sh
-
-      - name: Setup Pages
-        uses: actions/configure-pages@v4
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: site/public
-
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+    uses: ./.github/workflows/deploy-repos.yml
+    secrets: inherit
