--- a/.github/workflows/watch-upstream.yml
+++ b/.github/workflows/watch-upstream.yml
@@ -1,10 +1,9 @@
 name: Watch Upstream Releases
 
-# Checks every 5 minutes for a new upstream release and triggers a build immediately.
+# Checks every 15 minutes for a new upstream release and triggers a build.
 on:
   schedule:
-    # Every 5 minutes - fast response to new upstream releases.
-    - cron: '*/5 * * * *'
+    - cron: '*/15 * * * *'
   workflow_dispatch:
 
 jobs:
