fix: Use rm -f to avoid error when no SHA256SUMS files exist

--- a/.github/workflows/auto-build.yml
+++ b/.github/workflows/auto-build.yml
@@ -191,7 +191,7 @@ jobs:
           shopt -s nullglob
           if ls dist/SHA256SUMS-* 1>/dev/null 2>&1; then
             cat dist/SHA256SUMS-* > dist/SHA256SUMS
-            rm dist/SHA256SUMS-*
+            rm -f dist/SHA256SUMS-*
             echo "Merged checksums into dist/SHA256SUMS"
           fi
           if [[ ! -f "dist/SHA256SUMS" ]]; then
